tests/paczka1/fuzzy1/26817282.err
Error in line 5: rqnmKBAqtVE S464 43,3
Error in line 15: 5HZBk S769 90,7
Error in line 14: rqnmKBAqtVE A521 66,2
Error in line 25: S769 S769 12,$
Error in line 28: 5HZBk S406 49,3
Error in line 34: MowPbLyUaH S769 7,4
Error in line 36: MowPbLyUaH S464 74,4
